--- a/scss/main.scss
+++ b/scss/main.scss
@@ -71,6 +71,7 @@ p {
 
 a {
   text-decoration: none;
+  color: $yellow;
 }
 
 button {
@@ -344,6 +345,7 @@ li {
   padding: 100px 80px;
   background-color: $palegreen;
   text-align: center;
+  height: 1000px;
   -webkit-transition: all 0.4s ease;
   transition: all 0.4s ease;
 
@@ -376,29 +378,41 @@ li {
 
 .about {
   background-color: $brown;
-  display: flex;
-  align-content: center;
-  justify-content: center;
 }
 
 
 .about-article {
-  padding: 160px 20px;
+  max-width: 1000px;
+  padding: 100px 20px;
+  margin: 0 auto;
   text-align: center;
+
   &__heading {
-    font-size: 32px;
+    font-size: 3em;
     color: $whiteyellow;
     margin-bottom: 80px;
   }
   &__text {
     color: $whiteyellow;
-    max-width: 600px;
-    margin: 40px auto;
-    text-align: left;
-
+    text-align: justify;
+  }
+  &__text--intro {
+    color: $whiteyellow;
+    text-align: justify;
+    font-size: 1.4em;
   }
   &__image {
-    border-radius: 3px;
+    margin-right: 1px;
+    display: inline-block;
+  }
+  &__image--left {
+    float: left;
+    margin-right: 40px;
+  }
+  &__image--right {
+    float: right;
+    margin-left: 40px;
+    width: 50%;
   }
 }
 
@@ -481,7 +495,7 @@ li {
   &__text {
     max-width: 800px;
     color:$white;
-    font-size: 0.8em;
+    font-size: 0.9em;
     margin: 0 auto 20px;
   }
 }
