--- a/scss/main.scss
+++ b/scss/main.scss
@@ -15,15 +15,12 @@ $white: #fcf8ef; // text color
 $whiteyellow: #e8dabf; // text color on dark
 $whitepaleyellow: #9a8b70;
 
-$yellow: #ffcb69; // button, menu link, 
-$happy-yellow: #ffb323; // button hover, menu link hover, 
+$yellow: #ffcb69; // button, menu link,
+$happy-yellow: #ffb323; // button hover, menu link hover,
 $paleyellow: #ffe2ad;
 
 $rawsienna: #d08c60; // a la brown/orange
 $rawsienna-light: #f1b48b;
-
-
-
 
 html {
   box-sizing: border-box;
@@ -103,17 +100,57 @@ button:hover {
   position: relative;
 }
 
-.bold { font-weight: bold; }
-.emptyspace10 { min-height: 10px; height: 10px; display: block; }
-.emptyspace20 { min-height: 20px; height: 20px; display: block; }
-.emptyspace40 { min-height: 40px; height: 40px; display: block; }
-.emptyspace80 { min-height: 80px; height: 80px; display: block; }
-.palegreen { background-color: $palegreen; }
-.darkbrown { background-color: $brown-dark; }
-.brown { background-color: $brown; }
-.small-info { font-size: 0.8em; }
-.align-left { text-align: left; }
-.align-right { text-align: right; }
+.bold {
+  font-weight: bold;
+}
+.emptyspace10 {
+  min-height: 10px;
+  height: 10px;
+  display: block;
+}
+.emptyspace20 {
+  min-height: 20px;
+  height: 20px;
+  display: block;
+}
+.emptyspace40 {
+  min-height: 40px;
+  height: 40px;
+  display: block;
+}
+.emptyspace80 {
+  min-height: 80px;
+  height: 80px;
+  display: block;
+}
+.off-on-mob {
+  display: none;
+}
+.palegreen {
+  background-color: $palegreen;
+}
+.darkbrown {
+  background-color: $brown-dark;
+}
+.brown {
+  background-color: $brown;
+}
+.happyyellow {
+  color: $happy-yellow;
+}
+.small-info {
+  font-size: 0.8em;
+}
+.align-left {
+  text-align: left;
+}
+.align-right {
+  text-align: right;
+}
+.round5px {
+  border-radius: 5px;
+}
+
 
 .grid-4-col {
   display: grid;
@@ -260,8 +297,6 @@ $secondarycolor: $palegreen-light;
   }
 }
 
-
-
 li {
   margin: 0;
 }
@@ -321,7 +356,7 @@ li {
   &__header {
     text-align: center;
   }
-  
+
   &__heading2 {
     font-size: 4.5em;
     text-transform: uppercase;
@@ -384,7 +419,6 @@ li {
   background-color: $brown;
 }
 
-
 .about-article {
   max-width: 1000px;
   padding: 100px 20px;
@@ -403,7 +437,7 @@ li {
   &__text--intro {
     color: $whiteyellow;
     text-align: justify;
-    font-size: 1.4em;
+    font-size: 1.5em;
   }
   &__image {
     margin-right: 1px;
@@ -420,8 +454,6 @@ li {
   }
 }
 
-
-
 .testimonials {
   margin: 0;
 }
@@ -436,14 +468,14 @@ li {
   &__heading {
     font-size: 32px;
     color: $brown-alt;
-    margin-bottom: 80px;
+    margin-bottom: 40px;
   }
   &__info {
     max-width: 800px;
     margin: 0 auto;
     display: grid;
     grid-template-columns: 1fr 280px 1fr;
-    grid-column-gap: 80px;
+    grid-column-gap: 40px;
     padding: 0 0 100px;
     font-family: "Nunito Sans", serif;
   }
@@ -468,12 +500,12 @@ li {
   &__link {
     color: $brown-alt;
     &--expose {
-      font-size: 24px;
+      font-size: 1.2em;
       font-weight: 600;
     }
     &--alt {
-      color: $whiteyellow; 
-      font-size: 24px;
+      color: $whiteyellow;
+      font-size: 1.2em;
       font-weight: 600;
     }
   }
@@ -498,7 +530,7 @@ li {
   }
   &__text {
     max-width: 800px;
-    color:$white;
+    color: $white;
     font-size: 0.9em;
     margin: 0 auto 20px;
   }
@@ -517,9 +549,6 @@ li {
   }
 }
 
-
-
-
 .subpage {
   background-color: $brown;
   padding: 100px 20px;
@@ -529,37 +558,36 @@ li {
 
 .subpage-article {
   &__heading {
-    font-size: 3.3em;
+    font-size: 2.6em;
     color: $rawsienna;
+    margin-top: 0;
     margin-bottom: 40px;
   }
   &__heading2 {
-    font-size: 1.7em;
+    font-size: 1.4em;
     color: $rawsienna;
     text-transform: none;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
   }
+
   &__text {
     color: $whiteyellow;
-    text-align: justify;
+    text-align: left;
   }
   &__text--intro {
     color: $whiteyellow;
-    text-align: justify;
+    text-align: left;
     font-size: 1.2em;
   }
 
   &__image--left {
-    float: left;
-    margin-right: 40px;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
+    width: 100%;
   }
 
   &__image--right {
-    float: right;
-    margin-left: 40px;
-    margin-bottom: 20px;
-    width: 50%;
+    margin-bottom: 10px;
+    width: 100%;
   }
 }
 
@@ -568,8 +596,6 @@ li {
   &--style2 {
   }
 }
-
-
 
 .subpage-card {
   display: grid;
@@ -593,41 +619,85 @@ li {
 }
 
 
+/* MEDIA QUERIES */
+/* ............. */
+@media screen and (min-width: 768px) {
 
 
 
-@media screen and (min-width: 480px) {
-  .main {
-  }
-  .aside {
-    padding: 20px;
-  }
-
-  @media screen and (min-width: 768px) {
-    .main {
-    }
-
-    .navigation {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-
-    .navigation__link {
-      margin-right: 20px;
-    }
-    .hamburger {
-      display: none;
-    }
-    .grid {
-      display: grid;
-      grid-template-columns: 1fr 1fr 1fr;
-      row-gap: 20px;
-      column-gap: 20px;
-    }
+  .off-on-mob {
+    display: block;
   }
 
-  .aside {
-    padding: 20px;
+  .navigation {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .navigation__link {
+    margin-right: 20px;
+  }
+  .hamburger {
+    display: none;
+  }
+
+
+  .contact {
+    &__heading {
+      font-size: 1.6em;
+    }
+    &__info {
+      grid-column-gap: 80px;
+    }
+    
+    &__link {
+      color: $brown-alt;
+      &--expose {
+        font-size: 1.5em;
+        font-weight: 600;
+      }
+      &--alt {
+        color: $whiteyellow;
+        font-size: 1.5em;
+        font-weight: 600;
+      }
+    }
+  }
+
+
+
+
+  .subpage-article {
+    &__heading {
+      font-size: 3.3em;
+      margin-top: 10px;
+    }
+    &__heading2 {
+      font-size: 2em;
+    }
+    &__text {
+      color: $whiteyellow;
+      text-align: justify;
+    }
+    &__text--intro {
+      color: $whiteyellow;
+      text-align: justify;
+      font-size: 1.3em;
+    }
+
+    &__image--left {
+      float: left;
+      margin-right: 40px;
+      margin-bottom: 20px;
+      width: 50%;
+    }
+
+    &__image--right {
+      float: right;
+      margin-left: 40px;
+      margin-bottom: 20px;
+      width: 50%;
+    }
   }
 }
