--- a/styles/style.css
+++ b/styles/style.css
@@ -114,11 +114,18 @@ h2 {
   font-weight: normal; }
 
 p {
-  line-height: 1.6em; }
+  line-height: 1.6em;
+  margin: 8px 0 12px; }
 
 a {
   text-decoration: none;
   color: #ffcb69; }
+
+ul {
+  margin: 2px 0; }
+
+li {
+  line-height: 1.6em; }
 
 button {
   font-family: "Nunito Sans", Verdana, sans-serif;
@@ -194,6 +201,12 @@ button:hover {
 
 .round5px {
   border-radius: 5px; }
+
+.the-half {
+  max-width: 100%; }
+
+.one-third {
+  max-width: 100%; }
 
 .grid-4-col {
   display: grid;
@@ -561,6 +574,11 @@ li {
   text-transform: none;
   margin-bottom: 20px; }
 
+.subpage-article__heading3 {
+  font-size: 1.3em;
+  margin-top: 30px;
+  margin-bottom: 0; }
+
 .subpage-article__text {
   color: #e8dabf;
   text-align: left; }
@@ -602,6 +620,10 @@ li {
 @media screen and (min-width: 768px) {
   .off-on-mob {
     display: block; }
+  .the-half {
+    max-width: 50%; }
+  .one-third {
+    max-width: 33%; }
   .navigation {
     display: flex;
     justify-content: space-between;
@@ -627,7 +649,8 @@ li {
     font-size: 3.3em;
     margin-top: 10px; }
   .subpage-article__heading2 {
-    font-size: 2em; }
+    font-size: 2em;
+    margin-top: 50px; }
   .subpage-article__text {
     color: #e8dabf;
     text-align: justify; }
